--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,5 +2,6 @@ doctype html
 html
   head
     title Sinatra Address book app
+    link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet"
   body
     ==yield
